atualização do layout painel laptop pt-1

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -94,6 +94,7 @@
                         <option value="monitor">MONITOR</option>
                         <option value="mobiliário">MOBILIÁRIO EM GERAL</option>
                         <option value="esportes">ESPORTES</option>
+                        <option value="multimidia">MULTIMIDIA</option>
                      </select>
                   </div>
                </div>
