--- a/src/views/pages/formEdit.ejs
+++ b/src/views/pages/formEdit.ejs
@@ -70,6 +70,9 @@
                         <option value="beliche" <%= item.categoria === 'beliche' ? 'selected' : '' %>>BELICHE</option>
                         <option value="lousa" <%= item.categoria === 'lousa' ? 'selected' : '' %>>LOUSA</option>
                         <option value="monitor" <%= item.categoria === 'monitor' ? 'selected' : '' %>>MONITOR</option>
+                        <option value="mobiliario" <%= item.categoria === 'mobiliario' ? 'selected' : '' %>>MOBILIÁRIO EM GERAL</option>
+                        <option value="esportes" <%= item.categoria === 'esportes' ? 'selected' : '' %>>ESPORTES</option>
+                        <option value="multimidia" <%= item.categoria === 'multimidia' ? 'selected' : '' %>>MULTIMIDIA</option>
                      </select>
                   </div>
                </div>
