--- a/src/views/pages/historicoMovimentacao.ejs
+++ b/src/views/pages/historicoMovimentacao.ejs
@@ -18,7 +18,8 @@
       }
 
       .table-container {
-         max-height: 600px;
+         max-height: 55vh;
+         min-height: 75vh;
          overflow-y: auto;
          overflow-x: hidden;
       }
@@ -63,8 +64,8 @@
 
          <div class="caixa w-90 p-4 mx-auto">
 
-            <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
-               <div class="table-container">
+            <div class=" border caixa-externa p-4 shadow-sm rounded">
+               <div class="">
                   <div class="row">
                      <div class="mb-3 px-3">
                         <h2 style="border-bottom: 4px solid orange;"
@@ -73,7 +74,7 @@
                   </div>
                </div>
                <div class="table-container">
-                  <div id="historico-movimentacao" class="mt-3"></div>
+                  <div id="historico-movimentacao"></div>
                </div>
             </div>
          </div>
