--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -79,10 +79,6 @@
       opacity: 1;
    }
 
-   .w-90 {
-      width: 90% !important;
-   }
-
    /* Ajuste das colunas */
    .table-container th:nth-child(1), /* ID */
    .table-container td:nth-child(1) {
@@ -218,7 +214,7 @@
                <h2 class="text-white mt-0 fw-bold flex-grow-1 text-center">Estoque Geral</h2>
                <div class="d-flex align-items-center">
                   <label for="formato" class="text-white me-2">Formato:</label>
-                  <select id="formato" class="form-select form-select-sm me-2" style="width: auto;">
+                  <select id="formato" class="form-select form-select-md me-2" style="width: auto;">
                      <option value="pdf">PDF</option>
                      <option value="excel">Excel</option>
                   </select>
