--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -68,10 +68,6 @@
       opacity: 1;
    }
 
-   .w-90 {
-      width: 90% !important;
-   }
-
    @media (max-width: 1920px) {
       .table-container {
          max-height: 56vh;
@@ -139,7 +135,7 @@
                <h2 class="text-white mt-0 fw-bold flex-grow-1 text-center">Itens que saíram do estoque</h2>
                <div class="d-flex align-items-center">
                   <label for="formato" class="text-white me-2">Formato:</label>
-                  <select id="formato" class="form-select form-select-sm me-2" style="width: auto;">
+                  <select id="formato" class="form-select form-select-md me-2" style="width: auto;">
                      <option value="pdf">PDF</option>
                      <option value="excel">Excel</option>
                   </select>
