--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html class="m-0" lang="pt-BR">
 <head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
    <style>
@@ -8,7 +8,7 @@
          padding: 0;
          box-sizing: border-box;
       }
-
+      
       .navbar {
          background: linear-gradient(to right, #00621D, #0BA23D);
          padding: 1rem 0;
@@ -30,7 +30,6 @@
          text-decoration: none;
          font-size: 1.5rem;
          font-weight: bold;
-         /* cursor: default; */ /* Removido para restaurar o cursor pointer */
       }
 
       /* Remove o efeito visual de hover para o navbar-brand */
