--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -210,14 +210,79 @@
        to { width: 100%; }
    }
 
-   @media (max-width: 1200px) {
+   @media (max-width: 1366px) {
+
+        body{
+            height: 100vh !important;
+        }
+
+        .caixa-externa-painel{
+            height: 60vh !important;
+            /* margin: 3rem auto  !important; */
+            margin-top: 4rem !important;
+            padding: 0 !important;
+            /* background-color: #e605059a !important; */
+        }
+
        .system-box {
            flex: 0 0 calc(33.333% - 1rem);
-           max-width: 240px;
+           max-width: 250px;
+           height: 100px !important;
+           /* background-color: #990000; */
+           padding: 0 !important;
        }
-   }
 
-   @media (max-width: 992px) {
+       .systems-grid{
+            /* padding-bottom: 0 !important; */
+            
+            background-color: #f8fff29a;
+            margin: 2rem auto !important;
+       }
+
+       .caixa-externa-painel {
+            margin-top: 10rem;
+            width: 80vw;
+            height: 60vh !important;
+        }
+
+        .logo {
+            max-width: 280px !important;
+            margin: 0.25rem auto !important;
+            transform: scale(0.9);
+        }
+
+        .container-white {
+            background-color: rgb(255, 255, 255);
+            border-bottom: 8px solid orange;
+            text-align: center;
+            height: 2.5rem;
+            transform: translateY(-0.3rem) !important;
+            padding-bottom: 2rem !important;
+        }
+
+        h3{
+            font-size: 1.3rem;
+            /* padding-bottom: 1rem; */
+        }
+
+        footer {
+            /* margin-block: auto; */
+            padding-bottom: 2rem;
+            background: linear-gradient(to right, #00621D, #0BA23D);
+            border-top: 4px solid orange;
+            padding: 0.5rem;
+            text-align: center;
+            height: 14vh;
+            width: 100%;
+        }
+
+        .footer-content {
+            background-color: transparent;
+            padding-top: 1rem !important;
+        }
+    }
+
+   /* @media (max-width: 992px) {
        main {
            width: 95%;
        }
@@ -246,7 +311,7 @@
        .header-content {
            padding: 0.25rem 1rem !important;
        }
-   }
+   } */
 </style>
 
 <body>
@@ -262,7 +327,7 @@
        </div>
    </header>
 
-   <main class="w-60 caixa-externa-painel painel border">
+   <main class="w-60 caixa-externa-painel border">
        <div class="systems-grid">
            <a href="/entrada" class="system-box">
                <div>
