--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -22,6 +22,20 @@
       .w-95 {
          width: 95%;
       }
+
+      @media (max-width: 1366px) {
+         *{
+            font-size: 0.83rem;
+         }
+
+         .caixa-externa{
+            margin: 0 auto;
+         }
+         
+         .w-10{
+            width: 12%;
+         }
+      }
    </style>
 </head>
 
