--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -262,23 +262,26 @@
 
         h3{
             font-size: 1.3rem;
-            /* padding-bottom: 1rem; */
         }
 
+        h5{
+            padding-bottom: 3rem;
+        }
+        
         footer {
             /* margin-block: auto; */
-            padding-bottom: 2rem;
+        
             background: linear-gradient(to right, #00621D, #0BA23D);
             border-top: 4px solid orange;
             padding: 0.5rem;
             text-align: center;
-            height: 14vh;
+            height: 15vh !important;
             width: 100%;
         }
 
         .footer-content {
             background-color: transparent;
-            padding-top: 1rem !important;
+            padding: 1rem  !important;
         }
     }
 
