--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -228,6 +228,7 @@
                         <option value="galpao">ESTOQUE COLOG - GALPÃO</option>
                         <option value="sala">ESTOQUE COLOG - SALA</option>
                         <option value="cabemce">ESTOQUE COLOG - CABEMCE</option>
+                        <option value="cogepro">ESTOQUE COLOG - COGEPRO</option>
                      </select>
                   </div>
                </div>
