--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -155,6 +155,7 @@
                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/entrada">Entrada de Itens</a></li>
                   <li><a class="dropdown-item" href="/saida">Saída de Itens</a></li>
+                  <li><a class="dropdown-item" href="/form-solicitacao">Solicitação de Material</a></li>
                </ul>
             </li>
 
