--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -140,11 +140,12 @@
          <ul class="navbar-menu">
             <!-- Dropdown para Estoque -->
             <li class="navbar-item dropdown">
-               <a href="/tabela/estoqueatual" class="dropdown-toggle">Estoque</a>
+               <a href="/tabela/estoqueatual" class="dropdown-toggle">Tabelas</a>
                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/tabela/estoqueatual">Estoque Geral</a></li>
                   <li><a class="dropdown-item" href="/tabela/itens-novos">Itens Novos</a></li>
                   <li><a class="dropdown-item" href="/tabela/itens-usados">Itens Usados</a></li>
+                  <li><a class="dropdown-item" href="/tabela/solicitacao">Itens Solicitados</a></li>
                   <li><a class="dropdown-item" href="/qtde-unica">Quantitativo</a></li>
                </ul>
             </li>
